Fix z-index

--- a/Frontend/tabina/src/Css/filtertab.css
+++ b/Frontend/tabina/src/Css/filtertab.css
@@ -12,6 +12,8 @@ justify-content: space-evenly;
 width: 400px;
 background: #FFFFFF;
 box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
+margin-top: 77px;
+z-index: 1;
 }
 
 .canc {
@@ -21,6 +23,7 @@ box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
 .heading-tab {
     background: #F4EDE5;
     padding-top: 0.1px;
+
 }
 
 .heading-tab p {
@@ -80,7 +83,8 @@ height: 20px;
     display: flex;
     flex-direction: row;
     max-width: 200px;
-    top: 300px;
+    top: 100px;
+    margin-top: 80px;
 
 
 }
@@ -96,15 +100,11 @@ height: 20px;
     margin-left: 400px;
     z-index: -1;
   }
-  
-  .repcard {
-    /* adjust the width and height to fit your design */
-    
-  }
+
 
 
 /* Bao Hoang */
-/* .headtag .ingredient-item {
+.headtag .ingredient-item {
     cursor: pointer;
     height: 30px;
 }
@@ -117,5 +117,10 @@ height: 20px;
     display: flex;
     flex-wrap: wrap;
     gap: 14px;
-} */
+}
+
+.searchbar-container {
+    margin-top: 135px;
+}
+
   
