--- a/Frontend/tabina/src/Css/navbar.css
+++ b/Frontend/tabina/src/Css/navbar.css
@@ -5,8 +5,12 @@
     padding: 1% 5% 1% 3%;
     box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.15);
     background-color: #FFFFFF;
-}
+    position: fixed;
+    top: 0;
+    z-index: 1;
 
+  }
+  
 
 
 .nav-link {
