--- a/Frontend/tabina/src/Css/searchbar.css
+++ b/Frontend/tabina/src/Css/searchbar.css
@@ -65,13 +65,12 @@ outline: none;
 
 .searchbar-container {
   background: #F4EDE5;
-  border-radius: 10px;
   height: 60px;
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2;
   margin-top: 100px;
 }
 
@@ -97,3 +96,130 @@ outline: none;
   margin-bottom: 40px;
 }
 
+
+.ingred {
+  width: 80px;
+  padding-left: 10px;
+  background: #FFFFFF;
+  border: 1px solid #000000;
+  border-radius: 20px;
+  display: flex;
+  justify-content: space-evenly;
+  }
+  
+  .filter-tab {
+  width: 400px;
+  background: #FFFFFF;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
+  margin-top: 77px;
+  z-index: 1;
+  }
+  
+  .canc {
+      cursor: pointer;
+  }
+  
+  .heading-tab {
+      background: #F4EDE5;
+      padding-top: 0.1px;
+  
+  }
+  
+  .heading-tab p {
+      font-size: 25px;
+      font-weight: 600;
+      padding-left: 50px;
+      padding-bottom: 20px;
+  }
+  
+  .diff {
+      text-shadow: 20px 15px 30px rgba(0, 0, 0, 0.15);
+      padding-left: 50px;
+      font-size: 25px;
+      font-weight: 600;
+  }
+  
+  .diff-level {
+      padding-left: 50px;
+      display: block;
+  }
+  
+  .diff-option {
+      background: #FFFFFF;
+  border: 1px solid #000000;
+  box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+  width: 20px;
+  height: 20px;
+  }
+  
+  .sep-tab {
+      font-size: 20px;
+      display: flex;
+      justify-content: center;
+  }
+  
+  .class-lvl {
+      font-size: 22px;
+      display: inline-block;
+      margin-left: 15px;
+  }
+  
+  
+  .star-rat {
+      display: inline-block;
+     
+  }
+  
+  .st-cl {
+      width: 22px;
+      height: 22px;
+      margin-left: 15px;
+  
+  }
+  
+  .recipe-area {
+      display: flex;
+      flex-direction: row;
+      max-width: 200px;
+      top: 100px;
+      margin-top: 80px;
+  
+  
+  }
+  
+  .repcard {
+      margin-left: 50px !important;
+  }
+  
+  .recipe-area {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-gap: 20px;
+      margin-left: 400px;
+      z-index: -1;
+    }
+  
+  
+  
+  /* Bao Hoang */
+  .headtag .ingredient-item {
+      cursor: pointer;
+      height: 30px;
+  }
+  
+  .headtag {
+      margin: 28px 50px 37px 50px
+  }
+  
+  .result-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 14px;
+  }
+  
+  .searchbar-container {
+      margin-top: 135px;
+  }
+  
+    
